Updates for G Maintenance release
    Improvements
    Uplift dmaapmediatorproducer to Go v 19
    Update Dockerfile to use latest version of Go
    Fix sonar job after Go version uplift
    Updates license references
    Correct documentation

Issue-ID: NONRTRIC-838
